Some style added using bootstratp

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= hotwire_livereload_tags if Rails.env.development? %>
   </head>
 
-  <body>
+  <body class="container">
   <h1>Aplikacja Pożyczarka</h1>
     <%= yield %>
   </body>
