--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Items</h1>
+<h1>All items</h1>
 
 <%= link_to "New item", new_item_path %>
 
@@ -18,10 +18,10 @@
   <% @items.each do |item| %>
     <tr>
       <td><%= item.name %></td>
-      <td><%= item.active %></td>
-      <td><%= item.borrowed %></td>
+      <td class="text-center"><%= item.active ? '✅' : '🚫' %></td>
+      <td class="text-center"><%= item.borrowed ? '✅' : '🚫' %></td>
       <td>
-        <%= link_to "Show this item", item %>
+        <%= link_to "Show this item", item, class: 'btn btn-primary' %>
       </td>
     </tr>
   <% end %>
