--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,10 +1,23 @@
-<p style="color: green"><%= notice %></p>
+<p style="..."><%= notice %></p>
+<div class="container-fluid">
+  <h1>Item details</h1>
+  <%= form_with(model: @item, local: true) do |form| %>
+  <div class="form-group">
+    <%= form.label :name %>
+    <%= form.text_field :name, class: "form-control", readonly: true %>
+  </div>
+    <div class="form-group form-check">
+      <%= form.check_box :active, class: "form-check-input", disabled: true %>
+      <%= form.label :active, class: "form-check-label" %>
+    </div>
+    <div class="form-group form-check">
+      <%= form.check_box :borrowed, class: "form-check-input", disabled: true %>
+      <%= form.label :borrowed, class: "form-check-label" %>
+    </div>
+  <% end %>
 
-<%= render @item %>
+  <%= link_to 'Edit', edit_item_path(@item), class: "btn btn-primary min-width-btn" %> |
+  <%= link_to 'Back', items_path, class: "btn btn-light  min-width-btn" %>
+  <%= link_to 'Delete', items_path(@item), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: 'Are you sure?'} %>
 
-<div>
-  <%= link_to "Edit this item", edit_item_path(@item) %> |
-  <%= link_to "Back to items", items_path %>
-
-  <%= button_to "Destroy this item", @item, method: :delete %>
 </div>
