Puma back to v 5.6.4, delete item button using 2 method (link to, button to), but still no confirmaton window

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -18,6 +18,7 @@
 
   <%= link_to 'Edit', edit_item_path(@item), class: "btn btn-primary min-width-btn" %> |
   <%= link_to 'Back', items_path, class: "btn btn-light  min-width-btn" %>
-  <%= link_to 'Delete', items_path(@item), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: 'Are you sure?'} %>
+  <%= link_to 'Delete', item_path(@item), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: 'Are you sure?'} %>
+  <%= button_to 'Delete', item_path(@item), method: :delete, class: "btn btn-danger", form: { data: { turbo_confirm: 'Are you sure?' }} %>
 
 </div>
