--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -14,11 +14,14 @@
       <%= form.check_box :borrowed, class: "form-check-input", disabled: true %>
       <%= form.label :borrowed, class: "form-check-label" %>
     </div>
+    <div class="form-group">
+      <%= form.label :item_type %>
+      <%= form.text_field :item_type, class: "form-control", disabled: true %>
+    </div>
   <% end %>
 
   <%= link_to 'Edit', edit_item_path(@item), class: "btn btn-primary min-width-btn" %> |
   <%= link_to 'Back', items_path, class: "btn btn-light  min-width-btn" %>
   <%= link_to 'Delete', item_path(@item), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: 'Are you sure?'} %>
-  <%= button_to 'Delete', item_path(@item), method: :delete, class: "btn btn-danger", form: { data: { turbo_confirm: 'Are you sure?' }} %>
 
 </div>
