--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -27,8 +27,8 @@
   </div>
 
   <div class="form-group mb-2">
-    <% form.label :item_type, class: 'form-label' %>
-    <% form.select :item_type, Item.item_types.keys, { input_blank: 'Select item type' }, class: 'form-select' %>
+    <%= form.label :item_type, class: 'form-label' %>
+    <%= form.select :item_type, Item.item_types.keys, { input_blank: 'Select item type' }, class: 'form-select' %>
   </div>
 
   <div>
