--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,20 @@
   </head>
 
   <body class="container">
-  <h1>Aplikacja Pożyczarka</h1>
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <p class="navbar-brand">Pożyczarka</p>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <%= link_to 'All', root_path, class: ['nav-link', ('active' if current_page?(root_path))] %>
+          <%= link_to 'Active', active_items_path, class: ['nav-link', ('active' if current_page?(active_items_path))] %>
+          <%= link_to 'Inactive', inactive_items_path, class: ['nav-link', ('active' if current_page?(inactive_items_path))] %>
+          <%= link_to 'Borrowed', borrowed_items_path, class: ['nav-link', ('active' if current_page?(borrowed_items_path))] %>
+          <%= link_to 'On place', on_place_items_path, class: ['nav-link', ('active' if current_page?(on_place_items_path))] %>
+        </div>
+      </div>
+    </div>
+  </nav>
     <%= yield %>
   </body>
 </html>
