refactoring, some partials added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,14 +14,14 @@
   <body class="container">
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-      <p class="navbar-brand">Pożyczarka</p>
+      <p class="navbar-brand" <%= app_name %> </p>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <%= link_to 'All', root_path, class: ['nav-link', ('active' if current_page?(root_path))] %>
-          <%= link_to 'Active', active_items_path, class: ['nav-link', ('active' if current_page?(active_items_path))] %>
-          <%= link_to 'Inactive', inactive_items_path, class: ['nav-link', ('active' if current_page?(inactive_items_path))] %>
-          <%= link_to 'Borrowed', borrowed_items_path, class: ['nav-link', ('active' if current_page?(borrowed_items_path))] %>
-          <%= link_to 'On place', on_place_items_path, class: ['nav-link', ('active' if current_page?(on_place_items_path))] %>
+          <%= render 'shared/nav_link', label: 'All', path: root_path %>
+          <%= render 'shared/nav_link', label: 'Active', path: active_items_path %>
+          <%= render 'shared/nav_link', label: 'Inactive', path: inactive_items_path %>
+          <%= render 'shared/nav_link', label: 'Borrowed', path: borrowed_items_path %>
+          <%= render 'shared/nav_link', label: 'On place', path: on_place_items_path %>
         </div>
       </div>
     </div>
