--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,15 @@
   </head>
 
   <body class="container">
+
+  <% if notice %>
+  <p class="notice"><%= notice %></p>
+    <% end %>
+
+    <% if alert %>
+  <p class="alert"><%= alert %></p>
+  <% end %>
+
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
       <p class="navbar-brand" <%= app_name %> </p>
