--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,73 @@
-<h2>Sign up</h2>
+
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<!-- Section: Design Block -->
+<section class="text-center text-lg-start">
+  <style>
+      .cascading-right {
+          margin-right: -50px;
+      }
+
+      @media (max-width: 991.98px) {
+          .cascading-right {
+              margin-right: 0;
+          }
+      }
+  </style>
+
+  <!-- Jumbotron -->
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+
+  <div class="container py-4">
+    <div class="row g-0 align-items-center">
+      <div class="col-lg-6 mb-5 mb-lg-0">
+        <div class="card cascading-right" style="
+        background: hsla(0, 0%, 100%, 0.55);
+          backdrop-filter: blur(30px);
+        ">
+          <div class="card-body p-5 shadow-5 text-center">
+            <h2 class="fw-bold mb-5">Sign up now</h2>
+            <form>
+
+
+              <!-- Email input -->
+              <div class="form-outline mb-4">
+                <%= f.label :email, class: 'form-label' %><br />
+                <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control form-control-lg' %>
+              </div>
+
+              <!-- Password input -->
+              <div class="form-outline mb-4">
+                <%= f.label :password, class: 'form-label' %>
+                <% if @minimum_password_length %>
+                  <em>(<%= @minimum_password_length %> characters minimum)</em>
+                <% end %><br />
+                <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
+              </div>
+              <%= f.label :password_confirmation, class: 'form-label' %><br />
+              <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
+
+
+              <!-- Submit button -->
+
+              <%= f.submit "Sign up", class: 'btn btn-primary btn-lg btn-block' %>
+
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 mb-5 mb-lg-0">
+        <img src="https://mdbootstrap.com/img/new/ecommerce/vertical/004.jpg" class="w-100 rounded-4 shadow-4"
+             alt="" />
+      </div>
+      <%= render "devise/shared/links" %>
+    </div>
+  </div>
+  <% end %>
+  <!-- Jumbotron -->
+</section>
+
