--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,16 +23,16 @@
 
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-      <p class="navbar-brand" <%= app_name %> </p>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <p class="navbar-brand mb-0" <%= app_name %> </p>
+      <% if user_signed_in? %>
+        <%= render 'shared/navbar' %>
+      <% else %>
         <div class="navbar-nav">
-          <%= render 'shared/nav_link', label: 'All', path: root_path %>
-          <%= render 'shared/nav_link', label: 'Active', path: active_items_path %>
-          <%= render 'shared/nav_link', label: 'Inactive', path: inactive_items_path %>
-          <%= render 'shared/nav_link', label: 'Borrowed', path: borrowed_items_path %>
-          <%= render 'shared/nav_link', label: 'On place', path: on_place_items_path %>
+          <li class="nav-item">
+            <%= link_to 'Log in', new_user_session_path, class: 'nav-link' %>
+          </li>
         </div>
-      </div>
+      <% end %>
     </div>
   </nav>
     <%= yield %>
