--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -14,7 +14,7 @@
       <%= form.check_box :borrowed, class: "form-check-input", disabled: true %>
       <%= form.label :borrowed, class: "form-check-label" %>
     </div>
-    <div class="form-group mt-2 mb-2">
+    <div class="form-group mt-2 mb-2"">
       <%= form.label :item_type %>
       <%= form.text_field :item_type, class: "form-control", disabled: true %>
     </div>
