--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,25 +1,29 @@
 <h1>Friends</h1>
 
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
-</button>
+<%= button_tag 'Invite friend', class: 'btn btn-primary', data: { bs_toggle: 'modal', bs_target: '#exampleModal'} %>
 
-<!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <h5 class="modal-title fs-5" id="exampleModalLabel">
+          Invite new friend
+        </h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
+      <%= form_with model: Invitation.new do |form| %>
+        <div class="modal-body">
+          <div class="form-group">
+            <%= form.label :email, class: 'form-label' %>
+            <%= form.text_field :email, class: 'form-control form-control-lg', placeholder: 'Email' %>
+          </div>
+        <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+          <%= form.submit 'Send invitation', class: 'btn btn-primary' %>
       </div>
+      <% end %>
     </div>
   </div>
+  </div>
 </div>
+<%= render 'invitations/invitations', received_invitations: @received_invitations, sent_invitations: @sent_invitations %>
