--- a/app/views/invitations/_invitations.html.erb
+++ b/app/views/invitations/_invitations.html.erb
@@ -6,8 +6,8 @@
       <div class="card-title">
         <%= invitation.inviting_user.email %>
       </div>
-      <p class="card-subtitle tex-muted">
-        pending...
+      <p class="<%= invitation_status_class(invitation) %>">
+        <%= invitation.state %>
       </p>
       <p>
         Sent <%= distance_of_time_in_words_to_now(invitation.created_at) %> ago
@@ -25,8 +25,8 @@
         <div class="card-title">
           <%= invitation.inviting_user.email %>
         </div>
-        <p class="card-subtitle tex-muted">
-          pending...
+        <p class="<%= invitation_status_class(invitation) %>">
+          <%= invitation.state %>
         </p>
         <p>
           Sent <%= distance_of_time_in_words_to_now(invitation.created_at) %> ago
