--- a/app/views/invitations/_invitations.html.erb
+++ b/app/views/invitations/_invitations.html.erb
@@ -1,3 +1,4 @@
+<% if received_invitations.any? %>
 <div>
   <h2>Received_invitations</h2>
   <% received_invitations.each do |invitation| %>
@@ -12,11 +13,17 @@
       <p>
         Sent <%= distance_of_time_in_words_to_now(invitation.created_at) %> ago
       </p>
+      <div class="d-flex justify-content-end gap-2">
+        <%= link_to 'Accept', accept_invitation_path(invitation), class: 'btn btn-primary btn-sm', data:{ turbo_method: :post } %>
+        <%= link_to 'Reject', reject_invitation_path(invitation), class: 'btn btn-danger btn-sm', data:{ turbo_method: :post } %>
+      </div>
     </div>
   </div>
   <% end %>
 </div>
+<% end %>
 
+<% if sent_invitations.any? %>
 <div>
   <h2>Sent_invitations</h2>
   <% sent_invitations.each do |invitation| %>
@@ -35,3 +42,4 @@
     </div>
   <% end %>
 </div>
+<% end %>
