List of unread, and all notifications

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
     <div class="container-fluid">
       <p class="navbar-brand mb-0" <%= app_name %> </p>
       <% if user_signed_in? %>
+        <%= turbo_stream_from [current_user, :notifications] %>
         <%= render 'shared/navbar' %>
       <% else %>
         <div class="navbar-nav">
