--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -14,14 +14,41 @@
       <%= form.check_box :borrowed, class: "form-check-input", disabled: true %>
       <%= form.label :borrowed, class: "form-check-label" %>
     </div>
-    <div class="form-group mt-2 mb-2"">
+    <div class="form-group mt-2 mb-2">
       <%= form.label :item_type %>
       <%= form.text_field :item_type, class: "form-control", disabled: true %>
     </div>
+    <% if @item.borrowed && @item.borrowed_to %>
+      <div class="d-flex flex-column">
+        <p> <%= @item.borrowed_to.email %></p>
+        <p> <%= distance_of_time_in_words_to_now(@item.borrowed_at) %> ago</p>
+      </div>
+
+    <% end %>
   <% end %>
 
   <%= link_to 'Edit', edit_item_path(@item), class: "btn btn-primary min-width-btn" %> |
   <%= link_to 'Back', items_path, class: "btn btn-light  min-width-btn" %>
   <%= link_to 'Delete', item_path(@item), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: 'Are you sure?'} %>
+  <% if @item.borrowed %>
+    <%= link_to 'Return', return_item_item_path(@item), data: { turbo_method: :post } %>
+  <% end %>
 
+  <% if @item.requested? %>
+    <hr/>
+    <div class="d-flex flex-column">
+      <% @item.rental_requests.each do |request| %>
+        <div class="d-flex flex-row justify-content-between border-bottom">
+          <div class="d-flex flex-column">
+            <p><%= request.user.email %></p>
+            <p><%= distance_of_time_in_words_to_now(request.created_at) %> ago</p>
+          </div>
+          <div>
+            <%= link_to 'Accept', accept_rental_request_path(request), class: "text-success", data: { turbo_method: :post, turbo_confirm: "Are you sure to borrow this item to #{request.user.email}?"} %>
+            <%= link_to 'Reject', reject_rental_request_path(request), class: "text-danger", data: { turbo_method: :post, turbo_confirm: "Are you sure to reject this request?"} %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  <% end %>
 </div>
