--- a/app/views/friends/items.html.erb
+++ b/app/views/friends/items.html.erb
@@ -12,7 +12,13 @@
     <tr>
       <td><%= item.name %></td>
       <td>
-        <%= link_to 'Show', '#' %>
+        <% if item.requested_by?(current_user) %>
+            <span class="text-muted">
+              Request pending
+            </span>
+          <% else %>
+            <%= link_to 'Borrow', request_rent_item_path(item), data: { turbo_method: :post } %>
+          <% end %>
     </tr>
   <% end %>
   </tbody>
